--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -21,8 +21,9 @@
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPF4esicxuYzMibQhriaicJFXdntMnicPf5cfQjNNibWUF8BJRn1RLURwOUmLKw/0" alt="...">
 	  </div>
 	  {% if paper_finished %}
-	  <p style="color:#029fd6">亲，您已经完成了答题挑战，豪取{{ grade }}个积分！恭喜！</p>
+	  <p style="color:red">亲，您已经完成了答题挑战，豪取<font style="font-size:20px">{{ grade }}</font>个积分！恭喜！</p>
 	  <p style="color:#029fd6">快分享到朋友圈，让您的好友一起来挑战吧！</p>
+	  <p>记得关注【审核通知】，每晚十点准时发布，您可能就入围9月积分<font style="color:red">5折换购</font>睡袋名单啦！</p>
 	  {% else %}
 	  {% if identical %}
 	  <p style="color:#029fd6">美丽辣妈们，您是育儿高手！您有满腹育儿经！！ 您拥有养娃带娃的百分百经验！！！</p>
