--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -46,6 +46,7 @@
 	  <p>优尼世界积分系统正式上线啦！</p>
 	  <p>9月答题赢积分，可用积分<font style="color:red;font-size:20px">折上再5折换购</font>小小派睡袋哦！（注：每天仅限积分排名前100位！）</p>
 	  <p style="color:red">悄悄告诉您：邀请好友答题，可赢更多积分哦！</p>
+	  <p><a href="/weixin/scorerule/">查看详细积分规则>></a></p>
 	</div>
       </div>
       <div class="row">
