--- a/shopmanager/shopapp/weixin/templates/weixin/scorerule.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/scorerule.html
@@ -7,19 +7,20 @@
 <div class="container-fluid">
 
   <ul class="list-group">
-    <li class="list-group-item list-group-item-success">积分规则</li>
-    <li class="list-group-item">1.答题积分：共20题，每题1分，答对得分。</li>
-    <li class="list-group-item">2.邀请积分：邀请朋友（取消再订阅的不计）答题，得1分-2分；邀请的朋友成为优尼世界新粉丝并领取答题积分，再加10分。</li>
-    <li class="list-group-item">3.购物积分：任意官方旗舰店购物，实付每10元积1分，不足10元部分不计分。</li>
-    <li class="list-group-item">4.阅读积分：阅读官方微信推文，点击相关链接（根据标注分数加分：2分-5分）。</li>
-    <li class="list-group-item">5.历史积分：9月15日之前的活动，系统自动根据规则计分。8-9月免费试用活动中奖的亲，系统会自动扣除20积分。</li>
+    <li class="list-group-item list-group-item-success">积分活动</li>
+    <li class="list-group-item">购物订单每满100元，可使用10积分在微信平台申请10元返利，上不封顶（9月下旬开放）。</li>
+    <li class="list-group-item">9月活动：入围的粉丝美妈们，可用10积分折上再5折换购小小派睡袋。</li>
   </ul>
 
   <ul class="list-group">
-    <li class="list-group-item list-group-item-success">积分活动</li>
-    <li class="list-group-item">1. 购物订单每满100元，可使用10积分在微信平台申请10元返利，上不封顶（9月下旬开放）。</li>
-    <li class="list-group-item">2. 9月活动：入围的粉丝美妈们，可用10积分折上再5折换购小小派睡袋。</li>
+    <li class="list-group-item list-group-item-success">积分规则</li>
+    <li class="list-group-item">答题积分：共20题，每题1分，答对得分。</li>
+    <li class="list-group-item">邀请积分：邀请朋友（取消再订阅的不计）答题，得1分-2分；邀请的朋友成为优尼世界新粉丝并领取答题积分，再加10分。</li>
+    <li class="list-group-item">购物积分：任意官方旗舰店购物，实付每10元积1分，不足10元部分不计分。</li>
+    <li class="list-group-item">阅读积分：阅读官方微信推文，点击相关链接（根据标注分数加分：2分-5分）。</li>
+    <li class="list-group-item">历史积分：9月15日之前的活动，系统自动根据规则计分。8-9月免费试用活动中奖的亲，系统会自动扣除20积分。</li>
   </ul>
+
 
   <div class="footer">
     <p>© Uni Littles 2014</p>
