--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -7,19 +7,17 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">我的积分</div>
+    <div class="panel-heading" style="color:orange">9月积分活动</div>
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
-	  <span style="color:orange">累计: <font style="font-size:26px">{{ score }}</font>分</span>
+	  <p>9月答题赢积分，可用积分<font style="color:red;font-size:20px">折上再5折换购</font>小小派睡袋哦！（注：所有尺寸款式均5折! 每天仅限积分排名前100位！）</p>
+	  <p style="color:red">悄悄告诉您：邀请好友答题，可赢更多积分哦！</p>
 	</div>
       </div>
       <div class="row" style="margin-top:5px">
-	<div class="col-xs-6">
-	  <a href="/weixin/score/{{pk}}/">积分明细>></a>
-	</div>
-	<div class="col-xs-6">
-	  <a href="/weixin/scorerule/">积分规则>></a>
+	<div class="col-xs-12">
+	  <a class="btn btn-warning" href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/scoremenu/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">查看我的积分 >></a>
 	</div>
       </div>
     </div>
