--- a/shopmanager/shopapp/weixin/templates/weixin/remind.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/remind.html
@@ -14,7 +14,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <h5 style="color:#3071a9">请先验证手机号</h5><span style="color:red" id="id_verify_msg"></span>
-
+	  <p style="color:red">若您已收到验证码，请直接输入验证码并点击验证（不用再次输入手机号）。</p>
 	  <div class="input-group">
 	    <span class="input-group-addon">手机号</span>
 	    <input id="id_mobile_input" type="text" class="form-control">
