--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -30,7 +30,7 @@
 	</div>
       </div>
       {% if passed %}
-      <div class="row">
+      <div class="row" style="margin-top:5px">
 	<div class="col-xs-12">
 	  <p style="color:red;font-size:20px">亲，恭喜您入围9月积分折上再5折换购活动！</p>
 	  <p>请微信扫描下面二维码，加入优尼世界换购qq群（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
