--- a/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
@@ -52,7 +52,7 @@
       {% if refund %}
       {% include "weixin/refundresponse.html" %}
       {% else %}
-      {% if passed %}
+      {% if passed or score_passed %}
       {% include "weixin/refundapply.html" %}
       {% endif %}
       {% endif %}
