--- a/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
@@ -6,7 +6,11 @@
     <select id="id_refund" class="form-control input-sm" onchange="refundSelection(this);">
       <option value="10">请选择</option>
 <!--      <option value="0">朋友圈晒单</option> -->
+      {% if passed %}
       <option value="1">VIP 邀请</option>
+      {% else%}
+      <option value="2">10积分换购</option>
+      {% endif %}
     </select>
   </div>
 </div>
