--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -18,12 +18,6 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">9月积分活动</div>
     <div class="panel-body">
-      <div class="row">
-	<div class="col-xs-12">
-	  <p>9月答题赢积分，可用积分<font style="color:red;font-size:20px">折上再5折换购</font>小小派睡袋哦！（注：所有尺寸款式均5折! 每天仅限积分排名前100位！）</p>
-	  <p style="color:red">悄悄告诉您：邀请好友答题，可赢更多积分哦！</p>
-	</div>
-      </div>
       <div class="row" style="margin-top:5px">
 	<div class="col-xs-12">
 	  <a class="btn btn-warning" href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/scoremenu/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">查看我的积分 >></a>
@@ -42,6 +36,13 @@
 	  <div class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvqk5eS0Rm8Fm119N5dvMEJ02XfU8ic9gfyoXFAoy4eQhgjRuZRhNlbdF31ZLeAwjqUeRBGwHL1Libw/0" alt="...">
 	  </div>
+	</div>
+      </div>
+      {% else %}
+      <div class="row">
+	<div class="col-xs-12">
+	  <p>9月答题赢积分，可用积分<font style="color:red;font-size:20px">折上再5折换购</font>小小派睡袋哦！（注：所有尺寸款式均5折! 每天仅限积分排名前100位！）</p>
+	  <p style="color:red">悄悄告诉您：邀请好友答题，可赢更多积分哦！</p>
 	</div>
       </div>
       {% endif %}
