--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -19,7 +19,7 @@
     <div class="panel-heading" style="color:orange">9月积分活动</div>
     <div class="panel-body">
       <div class="row" style="margin-top:5px">
-	<div class="col-xs-12">
+	<div class="col-xs-12" style="text-align:center">
 	  <a class="btn btn-warning" href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/scoremenu/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">查看我的积分 >></a>
 	</div>
       </div>
