--- a/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
@@ -106,20 +106,20 @@
 
 <script type="text/javascript">
   function refundSelection(obj) {
-    if (obj.value == "1") {
-    var vipcode = $("#id_vip_code");
-            if (vipcode.css("display") == "none") {
-              vipcode.css("display","block");
-            }
-         } 
-         if (obj.value == "0") {
-            var vipcode = $("#id_vip_code");
-            if (vipcode.css("display") != "none") {
-              $("#id_code").val("");
-              vipcode.css("display","none");
-            }
-         }
-      };
+    if (obj.value == "1" || obj.value == "2") {
+      var vipcode = $("#id_vip_code");
+      if (vipcode.css("display") == "none") {
+        vipcode.css("display","block");
+      }
+    } 
+    if (obj.value == "0") {
+      var vipcode = $("#id_vip_code");
+      if (vipcode.css("display") != "none") {
+        $("#id_code").val("");
+        vipcode.css("display","none");
+       }
+    }
+  };
 
       function checkVipCode(code) {
         var reg = /^\d{6,7}$/;
