--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -21,8 +21,8 @@
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPF4esicxuYzMibQhriaicJFXdntMnicPf5cfQjNNibWUF8BJRn1RLURwOUmLKw/0" alt="...">
 	  </div>
 	  {% if paper_finished %}
-	  <p style="color:red">亲，您已经完成了答题挑战，豪取<font style="font-size:20px">{{ grade }}</font>个积分！恭喜！</p>
-	  <p style="color:#029fd6">快<font style="font-size:20px">点击右上角，分享到朋友圈</font>，让您的好友一起来挑战吧！</p>
+	  <p style="color:red">亲，您已经完成了答题挑战，豪取<font style="font-size:20px">{{ grade }}</font>个积分！恭喜！快关注【优尼世界】公众微信，查看积分折现活动！</p>
+	  <p style="color:#029fd6"><font style="font-size:20px">点击右上角，分享到朋友圈</font>，让您的好友一起来挑战吧！</p>
 	  <p>记得关注【审核通知】，每晚8点准时发布，您可能就入围9月积分<font style="color:red">5折换购</font>睡袋名单啦！（所有尺寸款式均5折! my god!）</p>
 	  {% else %}
 	  {% if identical %}
