--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -94,7 +94,7 @@
       {% endif %}
       {% endif %}
       {% else %}
-      <p style="color:#029fd6">亲，您没有提交试用申请哦！</p>
+      <p style="color:#029fd6">亲，9月试用活动已经结束了，积分换购活动进行中！</p>
       {% endif %}
       <!--
       <h5 style="color:#029fd6">申请攻略：</h5>
