--- a/shopmanager/shopback/purchases/templates/purchases/apply_payment_page.html
+++ b/shopmanager/shopback/purchases/templates/purchases/apply_payment_page.html
@@ -3,7 +3,7 @@
   <head>
     <title>采购付款单金额分配</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
     <link href="{{ STATIC_URL }}css/dialog.css" rel="stylesheet" type="text/css" />
