--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -50,7 +50,7 @@
       </div>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center; margin-top:10px">
-	  <p style="font-size:20px"><a href="/weixin/scorerule/">查看详细积分规则>></a></p>
+	  <p style="font-size:20px"><a href="/weixin/scoremenu/">查看详细积分规则>></a></p>
 	</div>
       </div>
       <div class="row">
