--- a/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
@@ -59,7 +59,7 @@
           {% if specific_order_finished %}
           {% include "weixin/refundapply.html" %}
           {% else %}
-          <p>亲，<font style="color:red">确认收货</font>好评后，返现申请入口就会开放哦！</p>
+          <p>亲，<font style="color:red">确认收货</font>好评后30分钟，返现申请入口就会开放哦！</p>
           {% endif %}
         {% endif %}
       {% endif %}
