--- a/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/vipcoupon.html
@@ -34,7 +34,8 @@
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuWjC2yA8fC0Dh8VRu28gdCSUItxZ3EYr8bjIV6f4WwhgAKg83kLQeoobLDbZS0RHTNUCBrChQyicA/0" alt="...">
 	  </a>
 	  <p>2)<font style="color:red;">限量50元</font>优惠券。到天猫【优尼世界旗舰店】拍下小小派睡袋，付款<font style="color:red;font-size:20px">立减50元！截至9月30日！</font></p>
-	  <p style="color:red">微信粉丝特权: 收货后分享到朋友圈，还可领取10元晒单返现！总优惠60元哦！</p>
+	  <p style="color:red">微信粉丝特权: 亲可以参加满100元10积分折现10元活动，上不封顶哦！</p>
+	  <!--<p style="color:red">微信粉丝特权: 收货后分享到朋友圈，还可领取10元晒单返现！总优惠60元哦！</p>-->
 	  <p>微信扫一扫下面二维码领取（把二维码图片保存到手机，微信扫一扫，选择右上角“相册”）：</p>
 	  <a href="#" class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLspO8Hk8iaf5x1ST3fK3VZB0RuNe2FBSw5cMpMITxibq0AHBneaEauAWMFNwUm3Rha4RnXDicPzAlA1g/0" alt="...">
