--- a/shopmanager/templates/404.html
+++ b/shopmanager/templates/404.html
@@ -1,10 +1,28 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-    404,page not found!
-</body>
+<!DOCTYPE html>
+<html lang="zh-cn">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>404</title>
+
+    <!-- Bootstrap -->
+    <link href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    
+	<style type="text/css">
+		body{
+			background-color:#E1E0DE;
+		}
+	</style>
+  </head>
+  <body>
+
+    <div class="container">
+    	<div class="container-fluid" style="text-align:center;margin-top:100px;">
+    	<div style="margin-bottom:5px;"><img src="/media/img/img_err_500.jpg"></img></div>
+    	<div ><span>你访问的页面未找到，404</span></div>
+    	<div>
+    </div>
+
+  </body>
 </html>
