--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -40,7 +40,8 @@
       </div>
       
       <div class="row" style="text-align:center">
-	<div class="col-xs-12" style="text-align:center; margin-top:10px">
+	<div class="col-xs-3"></div>	  
+	<div class="col-xs-6" style="text-align:center; margin-top:10px">
 	{% if order_exists %}
 	<a href="/weixin/sampleads/{{ pk }}/">您的试用申请已经提交！查看 >></a>
 	{% else %}
@@ -51,6 +52,7 @@
 	{% endif %}
 	{% endif %}
 	</div>
+	<div class="col-xs-3"></div>
       </div>
     </form>      
     
