--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -25,8 +25,9 @@
 	  <p>今日<font style="color:red; font-size:20px">{{ today_orders }}</font>人已申请</p>
 	  {% endif %}
 	</div>
-
-	  
+      </div>
+      <div class="row">
+	<div class="col-xs-6">
           {% if vip_exists %}
           <p style="color:red">优尼美妈忠粉,无需F码即可申请!</p>
 	  <input class="form-control" type="text" placeholder="无需VIP邀请码" {% if vipcode %} value="{{ vipcode }}" {% endif %} id="id_vipcode" status="1" disabled="disabled" name="vipcode"/>
@@ -40,8 +41,7 @@
       </div>
       
       <div class="row" style="text-align:center">
-	<div class="col-xs-3"></div>	  
-	<div class="col-xs-6" style="text-align:center; margin-top:10px">
+	<div class="col-xs-12" style="text-align:center; margin-top:10px">
 	{% if order_exists %}
 	<a href="/weixin/sampleads/{{ pk }}/">您的试用申请已经提交！查看 >></a>
 	{% else %}
@@ -52,7 +52,6 @@
 	{% endif %}
 	{% endif %}
 	</div>
-	<div class="col-xs-3"></div>
       </div>
     </form>      
     
