--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -27,6 +27,7 @@
 	</div>
       </div>
       <div class="row">
+	<div class="col-xs-3"></div>
 	<div class="col-xs-6">
           {% if vip_exists %}
           <p style="color:red">优尼美妈忠粉,无需F码即可申请!</p>
@@ -38,6 +39,7 @@
 	  <input type="hidden" name="vip_exists" value="0">
 	  {% endif %}
 	</div>
+	<div class="col-xs-3"></div>
       </div>
       
       <div class="row" style="text-align:center">
