refund 10 for every 100, fix

--- a/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/orderinfo.html
@@ -118,7 +118,7 @@
 
 <script type="text/javascript">
   function refundSelection(obj) {
-    if (obj.value == "1" || obj.value == "2") {
+    if (obj.value == "1" || obj.value == "2" || obj.value == "3") {
       var vipcode = $("#id_vip_code");
       if (vipcode.css("display") == "none") {
         vipcode.css("display","block");
