--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -96,7 +96,7 @@
     if (typeof WeixinJSBridge == "undefined") {
       alert("请先关注优尼世界哦！");
     } else {
-      WeixinJSBridge.invoke(‘shareTimeline‘, {
+      WeixinJSBridge.invoke("shareTimeline", {
         "title": "这是一个测试题头",
         "link": "http://weixin.huyi.so/weixin/freesamples/",
         "desc": "优尼世界：有你，就有全世界！",
