--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -96,11 +96,14 @@
     if (typeof WeixinJSBridge == "undefined") {
       alert("请先关注优尼世界哦！");
     } else {
-      WeixinJSBridge.invoke("shareTimeline", {
-        "title": "这是一个测试题头",
-        "link": "http://weixin.huyi.so/weixin/freesamples/",
-        "desc": "优尼世界：有你，就有全世界！",
-        "img_url": "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvJpNQrKjtsWEBcauwu2dCnRafKdlgicrx2I82ykEBZCZ4BC5QKByyug2dXLbDlmr2jfzDT7WYjhTA/0"});
+      WeixinJSBridge.invoke('shareTimeline', {
+        "title":"这是一个测试题头",
+        "link":"http://weixin.huyi.so/weixin/freesamples/",
+        "desc":"优尼世界：有你，就有全世界！",
+        "img_url":"https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvJpNQrKjtsWEBcauwu2dCnRafKdlgicrx2I82ykEBZCZ4BC5QKByyug2dXLbDlmr2jfzDT7WYjhTA/0"}, 
+        function(res) {
+          alert(res);
+        });
     }
   }
 </script>
