--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -102,7 +102,7 @@
         "desc":"优尼世界：有你，就有全世界！",
         "img_url":"https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvJpNQrKjtsWEBcauwu2dCnRafKdlgicrx2I82ykEBZCZ4BC5QKByyug2dXLbDlmr2jfzDT7WYjhTA/0"}, 
         function(res) {
-          alert(res);
+          alert(res.err_msg);
         });
     }
   }
