--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -8,7 +8,7 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-  <div class="panel-heading" style="color:orange">十月大礼：随意购买 免费寄到家！</div>
+  <div class="panel-heading" style="color:#e8792a">十月大礼：1000随意购买 免费寄到家！</div>
   <div class="panel-body">
     
     <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
@@ -32,9 +32,11 @@
 	  <input type="hidden" {% if vipcode %} value="{{ vipcode }}" {% endif %} id="id_vipcode" status="1" name="vipcode"/>
 	  <input type="hidden" name="vip_exists" value="1">
 	  {% else %}
-          <p>请输入F码（原VIP邀请码）：</p>
-	  <input class="form-control" type="text" placeholder="F码" id="id_vipcode" status="0" name="vipcode"/>
-	  <input type="hidden" name="vip_exists" value="0">
+          <p style="color:#e8792a">请输入F码(原VIP邀请码):</p>
+	  <div style="width:180px;margin:auto">
+	    <input class="form-control" type="text" placeholder="F码" id="id_vipcode" status="0" name="vipcode"/>
+	    <input type="hidden" name="vip_exists" value="0">
+	  </div>
 	  {% endif %}
 	</div>
       </div>
