--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -34,7 +34,7 @@
 	  {% else %}
           <p style="color:#e8792a">请输入F码 (原VIP邀请码):</p>
 	  <div style="width:160px;margin:auto">
-	    <input class="form-control" type="text" placeholder="F码" id="id_vipcode" status="0" name="vipcode"/>
+	    <input class="form-control" type="text" placeholder="请输入F码" id="id_vipcode" status="0" name="vipcode"/>
 	    <input type="hidden" name="vip_exists" value="0">
 	  </div>
 	  {% endif %}
