--- a/shopmanager/shopapp/weixin/templates/weixin/scoremenu.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/scoremenu.html
@@ -30,6 +30,9 @@
 
     </div>
   </div>
+  {% if sample_order %}
+  {% include "weixin/score/score_frozen.html" %}
+  {% endif %}
 
   <ul class="list-group">
     <li class="list-group-item list-group-item-success">积分活动</li>
