--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -8,7 +8,7 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-  <div class="panel-heading" style="color:#e8792a">十月必抢：1000名免单 随意购买 免费包邮寄到家！</div>
+  <div class="panel-heading" style="color:#e8792a">十月必抢：双11免单 随意购买 免费包邮！</div>
   <div class="panel-body">
     
     <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
@@ -20,9 +20,9 @@
 	  </a>
 
 	  {% if today_orders > 1000 %}
-	  <p>超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
+	  <p style="color:#029fd6">超过<font style="color:red; font-size:20px">1000</font>人已申请</p>
 	  {% else %}
-	  <p>今日<font style="color:red; font-size:20px">{{ today_orders }}</font>人已申请</p>
+	  <p style="color:#029fd6">今日<font style="color:red; font-size:20px">{{ today_orders }}</font>人已申请</p>
 	  {% endif %}
 	</div>
       </div>
@@ -33,7 +33,7 @@
 	  <input type="hidden" name="vip_exists" value="1">
 	  {% else %}
           <p style="color:#e8792a">请输入F码 (原VIP邀请码):</p>
-	  <div style="width:160px;margin:auto">
+	  <div style="width:140px;margin:auto">
 	    <input class="form-control" type="text" placeholder="请输入F码" id="id_vipcode" status="0" name="vipcode"/>
 	    <input type="hidden" name="vip_exists" value="0">
 	  </div>
