--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -41,6 +41,7 @@
 	  <p>这款天猫、京东已经售出10000多件，好评如潮的婴童斗篷，首次开放免费试用。<font style="color:red">斗篷派出800份名额，另加800粉神秘大礼，共计1600份！机会多到数不清，快抢啊！！！</font></p>  
 	  {% if vipcode == "898786" %} 
 	  <p style="font-size:20px; color:red; text-align:center">您刚才输入的VIP邀请码错误，请用正确的VIP邀请码重新申请!</p>
+	  <a class="btn btn-waring" href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">点击重新申请</a>
 	  {% else %}
 	  <p style="font-size:20px; color:red; text-align:center">VIP邀请码: {{ vipcode }}</p>
 	  {% endif %}
