--- a/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
@@ -39,18 +39,18 @@
 	      <p style="color:#029fd6">1. 若您获得了双11免单资格，我们需要你到官方旗舰店付款购买，确认收到货满意之后，再全额退款给您，你会:</p>
 	      <p id="id_p11"><input type="radio" name="p1" value="0" id="id_input11"> 不愿意。</p>
 	      <p id="id_p12"><input type="radio" name="p1" value="2" id="id_input12"> 我愿意。官方平台的物流记录，可作为活动真实性的依据。</p>
-	      <p style="color:#029fd6">2. 只要您的F码被朋友使用一次，就能获得满199减50优惠券，什么时候使用最划算？</p>
+	      <p style="color:#029fd6">2. 您的F码被朋友使用一次，可得满199减50优惠券，什么时候使用最划算？</p>
 	      <p id="id_p21"><input type="radio" name="p2" value="0" id="id_input21"> 任何时候都会省50。</p>
-	      <p id="id_p22"><input type="radio" name="p2" value="2" id="id_input22"> 在双11当日使用最省。双11折扣全年最低，再使用此券折上折。。。么么哒！</p>
+	      <p id="id_p22"><input type="radio" name="p2" value="2" id="id_input22"> 双11当日使用最划算。双11折扣全年最低，使用此券折上折。。。么么哒！</p>
 	      <p style="color:#029fd6">3. 如果你有20积分，在双11当日最多省多少钱？</p>
-	      <p id="id_p32"><input type="radio" name="p3" value="2" id="id_input32"> 优惠券减50元，20个积分返现20元，省70元。</p>
+	      <p id="id_p32"><input type="radio" name="p3" value="2" id="id_input32"> 优惠券省50，积分返现20，省70元。</p>
 	      <p id="id_p31"><input type="radio" name="p3" value="0" id="id_input31"> 优惠券省50元；</p>
 	      <p style="color:#029fd6">4. 双11很多商品会在第一小时内售空，如何可以抢到？</p>
-	      <p id="id_p41"><input type="radio" name="p4" value="2" id="id_input41"> 提前加入购物车，在双11凌晨第一小时内付款，不会拥堵。</p>
-	      <p id="id_p42"><input type="radio" name="p4" value="0" id="id_input42"> 在双11凌晨选好商品，下单，付款。</p>
+	      <p id="id_p41"><input type="radio" name="p4" value="2" id="id_input41"> 提前加入购物车，在第一小时付款，免拥堵。</p>
+	      <p id="id_p42"><input type="radio" name="p4" value="0" id="id_input42"> 在双11凌晨选商品，下单，付款。</p>
 	      <p style="color:#029fd6">5. 双11如果天猫用户只有满199减20优惠券，你如何看待微信用户折扣？</p>
 	      <p id="id_p51"><input type="radio" name="p5" value="0" id="id_input51"> 比天猫用户多省30元。</p>
-	      <p id="id_p52"><input type="radio" name="p5" value="2" id="id_input52"> 如果有20积分，比天猫用户多省50元。</p>
+	      <p id="id_p52"><input type="radio" name="p5" value="2" id="id_input52"> 若有20积分，可多省50元。</p>
 	    </div>
 	  </div>
 	</div>
