--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -13,7 +13,7 @@
     {% endif %}
     <div class="panel-body">
       {% if from_page == "freesamples" %}
-      <p style="color:#3071a9">亲，还有<font style="color:orange"><span style="font-size:20px">2</span>步</font>就完成申请啦！请补充信息：</p>
+      <p style="color:#3071a9">亲，还有<font style="color:orange"><span style="font-size:20px">2</span>步</font>就完成啦！请补充宝宝信息：</p>
       {% endif %}
       <h5 style="color:#3071a9">出生/预产信息 </h5>
       <div class="row">
