--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -1,6 +1,10 @@
 {% extends "weixin/weixin_base.html" %}
 
+{% if from_page == "freesamples" %}
+{% block title %} 第二步：完善信息 {% endblock %}
+{% else %}
 {% block title %} 宝宝档案 {% endblock %}
+{% endif %}
 
 {% block container %}
 
