--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -3,7 +3,7 @@
 
 {% block title %}
 {% if from_page == "freesamples" %}
-第二步：完善信息 
+二：完善信息 
 {% else %}
 宝宝档案
 {% endif %}
@@ -20,126 +20,139 @@
     <div class="panel-body">
       {% if from_page == "freesamples" %}
       <p>亲，还有<font style="color:orange"><span style="font-size:20px">2</span>步</font>就完成啦！请补充宝宝信息：</p>
+      <form method="post" action="/weixin/sampleapply/" onsubmit="return check()">{% csrf_token %}
+	<input type="hidden" name="sample_pk" value="{{ sample.pk }}"/>
+	<input type="hidden" name="sku_code" value="{{ sku.sku_code }}"/>
+	<input type="hidden" name="vipcode" value="{{ vipcode }}"/>
+	<input type="hidden" name="vip_exists" value="{{ vip_exists }}"/>
+
       {% endif %}
-      <h5 style="color:#3071a9">出生/预产信息 </h5>
-      <div class="row">
-	<div class="col-xs-3">
-	  <p style="float:right">年</p>
-	</div>
-	<div class="col-xs-9">
-	  <select id="id_year" class="form-control input-sm">
-	    <option value="0">请选择</option>
-	    {% for year in years %}
-	    {% if year == user.birth_year %}
-	    <option id="id_year_{{ year }}" value="{{ year }}" selected="selected">{{ year }}</option>
-	    {% else %}
-	    <option id="id_year_{{ year }}" value="{{ year }}">{{ year }}</option>
-	    {% endif %}
-	    {% endfor %}
-	  </select>
-	</div>
-      </div>
-      <div class="row">
-	<div class="col-xs-3">
-	  <p style="float:right">月</p>
-	</div>
-	<div class="col-xs-9">
-	  <select id="id_month" class="form-control input-sm">
-	    <option value="0">请选择</option>
-	    {% for month in months %}
-	    {% if month == user.birth_month %}
-	    <option id="id_month_{{ month }}" value="{{ month }}" selected="selected">{{ month }}</option>
-	    {% else %}
-	    <option id="id_month_{{ month }}" value="{{ month }}">{{ month }}</option>
-	    {% endif %}
-	    {% endfor %}
-	  </select>
-	</div>
-      </div>
-      <div class="row">
-	<div class="col-xs-3">
-	  <p style="float:right">性别</p>
-	</div>
-	<div class="col-xs-9">
-	  <select id="id_sex" class="form-control input-sm">
-	    <option value="0">请选择</option>
-	    {% if user.baby_sex == "m" %}
-	    <option id="id_sex_m" value="m" selected="selected">王子</option>
-	    <option id="id_sex_f" value="f">公主</option>
-	    {% elif user.baby_sex == "f" %}
-	    <option id="id_sex_m" value="m">王子</option>
-	    <option id="id_sex_f" value="f" selected="selected">公主</option>
-	    {% else %}
-	    <option id="id_sex_m" value="m">王子</option>
-	    <option id="id_sex_f" value="f">公主</option>
-	    {% endif %}
-	  </select>
-	</div>
-      </div>
+	<h5 style="color:#3071a9">出生/预产信息 </h5>
 
-      <div class="row">
-	<div class="col-xs-12">
-	  <h5 style="color:#3071a9">验证手机</h5><span style="color:red" id="id_verify_msg"></span>
-	  <div class="input-group">
-	    <span class="input-group-addon">手机号</span>
-	    {% if user.isvalid %}
-	    <input id="id_mobile_input" type="text" value="{{ user.mobile }}" class="form-control" disabled="disabled">
-	    <span class="input-group-btn">
-	      <button id="id_requestcode_button" class="btn btn-success" type="button" status="2">已验证</button>
-	    </span>
+	<div class="row">
+	  <div class="col-xs-3">
+	    <p style="float:right">年</p>
 	  </div>
-	  {% else %}
-	  <input id="id_mobile_input" type="text" class="form-control">
-	  <span class="input-group-btn">
-	    <button id="id_requestcode_button" class="btn btn-primary" type="button" onclick="requestcode();" status="0">获验证码</button>
-	  </span>
-
-	</div>
-	<div id="id_verifycode_group" class="input-group">
-	  <span class="input-group-addon">验证码</span>
-	  <input id="id_code_input" type="text" class="form-control">
-	  <span class="input-group-btn">
-	    <button id="id_verifycode_button" class="btn btn-warning" type="button" onclick="verifycode();">点击验证</button>
-	  </span>
-	</div>
-	{% endif %}
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-12">
-	<h5 style="color:#3071a9">收货信息</h5>
-	<div class="input-group">
-	  <span class="input-group-addon">收货人 </span>
-	  <input id="id_receiver_name" type="text" value="{{ user.receiver_name}}" class="form-control">{% csrf_token %}
-	  <input type="hidden" id="id_openid" value="{{ openid }}">
+	  <div class="col-xs-9">
+	    <select id="id_year" name="year" class="form-control input-sm">
+	      <option value="0">请选择</option>
+	      {% for year in years %}
+	      {% if year == user.birth_year %}
+	      <option id="id_year_{{ year }}" value="{{ year }}" selected="selected">{{ year }}</option>
+	      {% else %}
+	      <option id="id_year_{{ year }}" value="{{ year }}">{{ year }}</option>
+	      {% endif %}
+	      {% endfor %}
+	    </select>
+	  </div>
 	</div>
 
-	<div class="input-group">
-	  <input id="id_province" type="text" value="{{ user.province }}" class="form-control">
-	  <span class="input-group-addon">省</span>
+	<div class="row">
+	  <div class="col-xs-3">
+	    <p style="float:right">月</p>
+	  </div>
+	  <div class="col-xs-9">
+	    <select id="id_month" name="month" class="form-control input-sm">
+	      <option value="0">请选择</option>
+	      {% for month in months %}
+	      {% if month == user.birth_month %}
+	      <option id="id_month_{{ month }}" value="{{ month }}" selected="selected">{{ month }}</option>
+	      {% else %}
+	      <option id="id_month_{{ month }}" value="{{ month }}">{{ month }}</option>
+	      {% endif %}
+	      {% endfor %}
+	    </select>
+	  </div>
 	</div>
-	<div class="input-group">
-	  <input id="id_city" type="text" value="{{ user.city }}" class="form-control">
-	  <span class="input-group-addon">市</span>
-	</div>
-	<div class="input-group">
-	  <span class="input-group-addon">详址</span>
-	  <input id="id_streetaddr" type="text" value="{{ user.address }}" class="form-control">
-	</div>
-	
-      </div>
-    </div>
 
-    <div class="row" style="margin-top:10px;text-align:center">
-      <p id="id_savelabel" style="color:red"></p>
-      <div class="col-xs-12" style="text-align:center">
+	<div class="row">
+	  <div class="col-xs-3">
+	    <p style="float:right">性别</p>
+	  </div>
+	  <div class="col-xs-9">
+	    <select id="id_sex" name="sex" class="form-control input-sm">
+	      <option value="0">请选择</option>
+	      {% if user.baby_sex == "m" %}
+	      <option id="id_sex_m" value="m" selected="selected">王子</option>
+	      <option id="id_sex_f" value="f">公主</option>
+	      {% elif user.baby_sex == "f" %}
+	      <option id="id_sex_m" value="m">王子</option>
+	      <option id="id_sex_f" value="f" selected="selected">公主</option>
+	      {% else %}
+	      <option id="id_sex_m" value="m">王子</option>
+	      <option id="id_sex_f" value="f">公主</option>
+	      {% endif %}
+	    </select>
+	  </div>
+	</div>
+
+	<div class="row">
+	  <div class="col-xs-12">
+	    <h5 style="color:#3071a9">验证手机</h5><span style="color:red" id="id_verify_msg"></span>
+	    <div class="input-group">
+	      <span class="input-group-addon">手机号</span>
+	      {% if user.isvalid %}
+	      <input id="id_mobile_input" type="text" value="{{ user.mobile }}" class="form-control" disabled="disabled">
+	      <span class="input-group-btn">
+		<button id="id_requestcode_button" class="btn btn-success" type="button" status="2">已验证</button>
+	      </span>
+	      {% else %}
+	      <input id="id_mobile_input" type="text" class="form-control">
+	      <span class="input-group-btn">
+		<button id="id_requestcode_button" class="btn btn-primary" type="button" onclick="requestcode();" status="0">获验证码</button>
+	      </span>
+	      {% endif %}
+	    </div>
+	    {% if not user.isvalid %}
+	    <div id="id_verifycode_group" class="input-group">
+	      <span class="input-group-addon">验证码</span>
+	      <input id="id_code_input" type="text" class="form-control">
+	      <span class="input-group-btn">
+		<button id="id_verifycode_button" class="btn btn-warning" type="button" onclick="verifycode();">点击验证</button>
+	      </span>
+	    </div>
+	    {% endif %}
+	  </div>
+	</div>
+
+	<div class="row">
+	  <div class="col-xs-12">
+	    <h5 style="color:#3071a9">收货信息</h5>
+	    <div class="input-group">
+	      <span class="input-group-addon">收货人 </span>
+	      <input id="id_receiver_name" type="text" name="receiver_name" value="{{ user.receiver_name}}" class="form-control">
+	      <input type="hidden" id="id_openid" name="openid" value="{{ openid }}">
+	    </div>
+
+	    <div class="input-group">
+	      <input id="id_province" type="text" name="province" value="{{ user.province }}" class="form-control">
+	      <span class="input-group-addon">省</span>
+	    </div>
+	    <div class="input-group">
+	      <input id="id_city" type="text" name="city" value="{{ user.city }}" class="form-control">
+	      <span class="input-group-addon">市</span>
+	    </div>
+	    <div class="input-group">
+	      <span class="input-group-addon">详址</span>
+	      <input id="id_streetaddr" type="text" name="streetaddr" value="{{ user.address }}" class="form-control">
+	    </div>
+	    
+	  </div>
+	</div>
+
+	<div class="row" style="margin-top:10px;text-align:center">
+	  <p id="id_savelabel" style="color:red"></p>
+	  <div class="col-xs-12" style="text-align:center">
+	    {% if from_page == "freesamples" %}
+	    <button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存，下一步>></button>
+	    {% else %}
+	    <button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存信息</button>
+	    {% endif %}
+	  </div>
+	</div>
 	{% if from_page == "freesamples" %}
-	<button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存，下一步>></button>
-	{% else %}
-	<button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存信息</button>
-	{% endif %}
-      </div>
+        </form>
+        {% endif %}
     </div>
   </div>
 
@@ -302,7 +315,7 @@
 
         if ($("#id_requestcode_button").attr("status") != "2") {
           $("#id_savelabel")[0].innerHTML = "请先验证手机号！";
-          return;
+          return false;
         }
         var year = $("#id_year").val(); 
         var month = $("#id_month").val();
@@ -314,21 +327,21 @@
 
         if (year == "0" || month == "0" || sex == "0") {
           $("#id_savelabel")[0].innerHTML = "年月或性别选择错误！！";
-          return;
+          return false;
         }
         if (receiver_name.length < 2 || province.length < 2 || city.length < 2 || streetaddr.length < 4) {
           $("#id_savelabel")[0].innerHTML = "输入信息错误,请仔细检查提交！";
-          return;												 
+          return false;												 
         }
+        {% if from_page == "freesamples" %}
+        return true;
+        {% else %}
         var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
         var openid = $("#id_openid").val();
         var url = "/weixin/babyinfo/";
         var data = {"year":year, "month":month, "sex":sex, 
                     "receiver_name":receiver_name, "province":province,
                     "city":city, "streetaddr":streetaddr, "openid":openid,
-                    {% if from_page == "freesamples" %}
-                    "from":"freesamples",
-                    {% endif %}
                     "csrfmiddlewaretoken":csrf_token};
         var callback = function (res) {
           if (res["code"] == "ok") {
@@ -338,6 +351,7 @@
         };
         
         $.ajax({url:url, data:data, type:"post", success:callback});
+        {% endif %}
       }
 
     
